# cdde

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  cdde.1.in  cdde.xml.5.in  configure  configure.in  project.config
src/: Makefile.am  Makefile.in  cdde.c  cdde.h  config.h.in  configfile.c  configfile.h  list.c  list.h  string.c  string.h  util.c  util.h
